Vistas CRUD usuario Vista listado de documentos por usuario

--- a/app_documento/app/views/documentos/index.html.erb
+++ b/app_documento/app/views/documentos/index.html.erb
@@ -1,6 +1,9 @@
-<h1><%= flash[:title] %></h1>
+<div class="span2"></div>
+<div class="span8">
+<h3><%= flash[:title] %></h3>
 
-<div class="data_filters">
+
+<div class="table table-striped">
   <table id="show_documentos">
     <thead>
       <tr>
@@ -26,3 +29,5 @@
     </tbody>
   </table>
 </div>
+</div>
+<div class="span2"></div>
