Pestañas de Documentos, Importadores y presentaciones en show de producto Show de tramite en dialog

--- a/app_documento/app/assets/stylesheets/application.css
+++ b/app_documento/app/assets/stylesheets/application.css
@@ -20,3 +20,18 @@
   margin-bottom: 50px;
   padding-bottom: 50px;
 }
+
+div.tableContainer {
+  clear:both;
+  height: 300px;
+  overflow: auto;
+}
+
+html>body div.tableContainer {
+  overflow: auto;
+}
+
+.add-stuff {
+  margin-top: 30px;
+}
+
