--- a/app_documento/app/views/presentacions/_form.html.erb
+++ b/app_documento/app/views/presentacions/_form.html.erb
@@ -1,16 +1,10 @@
+<div class="span3"></div>
+<div class="span5">
+<legend>
+  <%=flash[:accion]%>
+</legend>
 <%= semantic_form_for @presentacion do |f| %>
-  <ul>
-    <table class="table_forms">
-      <thead>
-        <tr>
-          <td colspan="2">
-            <h1>
-              <%=flash[:accion]%>
-            </h1>
-          </td>
-        </tr>
-      </thead>
-      <tbody>
+    <table>
         <tr>
           <td>
             <%= f.input :cpe, :label => "Nº CPE"%>
@@ -36,15 +30,12 @@
         </tr>
         <tr>
           <td>
+            <%= f.action :submit, :label => flash[:accion] %>
           </td>
           <td>
-            <%= f.action :submit, :label => flash[:accion] %>
-            <button>
-              <%= link_to 'Volver', :back %>
-            </button>
           </td>
         </tr>
-      </tbody>
     </table>
-  </ul>
 <% end %>
+</div>
+<div class="span3"></div>
