--- a/app_documento/app/views/tramites/show.html.erb
+++ b/app_documento/app/views/tramites/show.html.erb
@@ -90,7 +90,7 @@
   <div class="span4">
     <h3>Requisitos</h3>
     <table class="table table-hover table-striped">
-      <% @tramite.requisitos.each do |r| %>
+      <% @tramite.requisitos.each_with_index do |r,i| %>
         <tr>
           <td>
             <div class="pull-right">
@@ -103,20 +103,27 @@
                   <span class="label label-danger">rechazado</span>
                 <% end %>
             </div>
-            <%= link_to r.TipoRequisito.name, r %>
+            <%= link_to r.TipoRequisito.name, r, :remote => :true, :id => "req#{i}" %>
           </td>
         </tr>
       <% end %>
     </table>
   </div>
-<div class="span1"></div>
-<% if current_usuario.admin > 0 and @req_faltantes == 0%>
-<% end %>
-<% if current_usuario.admin > 0  and @tramite.recibido %>
-<% end %>
-
-                  <%if current_usuario.admin == 0 %>
-                    <button style="padding:10px;margin-left:30px;">
-                      <%= link_to 'Volver', tramites_path %>
-                    </button>
-                  <% end %> 
+  <div class="span1">
+    <div id="show-requisito"></div>
+    <script>
+      for (var i = 0; i < <%= @tramite.requisitos.length%>; ++i) {
+        $("#req"+i).click(function() {
+          $( this ).bind("ajax:success", function(event, data, status, xhr){
+            $("#show-requisito").html(xhr.responseText);
+          $("#show-requisito").dialog({
+            "width" : "400",
+            "height": "300",
+            "title" : "Requisito"
+          })
+          }
+          )
+        })
+      }
+    </script>
+  </div>
