--- a/app_documento/app/views/productos/show_documentos.html.erb
+++ b/app_documento/app/views/productos/show_documentos.html.erb
@@ -30,6 +30,6 @@
 </div>
 <% if current_usuario.admin > 0 %>
   <button class="btn btn-default add-stuff">
-    <%= link_to 'Agregar documento', new_documento_path %>
+    <%= link_to 'Agregar documento', new_documento_path(:producto_id => @producto.id) %>
   </button>
 <% end %>
