--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -16,7 +16,7 @@
                 <a href="" class="dropdown-toggle" data-toggle="dropdown">Mis Solicitudes</a>
               <ul class="dropdown-menu">
                 <li>
-                <%= link_to  'Nuevo solicitud', new_tramite_path %>
+                <%= link_to  'Nueva solicitud', new_tramite_path %>
                 </li>
                 <li>
                 <%= link_to  'Listar todas', tramites_path %>
@@ -26,7 +26,7 @@
               <li class="dropdown">
               <a href="" class="dropdown-toggle" data-toggle="dropdown">
                 Alertas
-                <span class="badge"><%= session[:alerts].length %></span>
+                <span class="badge serious-text"><%= session[:alerts].length %></span>
               </a>
               <ul class="dropdown-menu">
               <% session[:alerts].each do |a| %>
