log sesiones, logo pyramid kiwi, detalles interfaz, zona horaria

--- a/app_documento/app/views/layouts/_footer.html.erb
+++ b/app_documento/app/views/layouts/_footer.html.erb
@@ -2,22 +2,22 @@
   <div class="row">
     <div class="span1"></div>
     <% if usuario_signed_in? %>
-      <div class="span2" style="margin-top: 17px;">
+      <div class="span2" style="margin-top: 11px;">
       <%= link_to 'Contáctanos', "mailto:marthaovalles@gmail.com",
         :title => "Envia un e-mail para comunicarte con nosotros.", :target => "_blank",
         :style => "color: white !important; font-weight:20;" %>
       </div>
     <% else %>
-      <div class="span2" style="margin-top: 17px;">
+      <div class="span2" style="margin-top: 5px;">
       <%= link_to image_tag("/assets/chrome.png",
                             :title => "Para esta pagina se recomienda usar el explorador Google Chrome."),
                             "https://www.google.com/intl/en/chrome/browser", :target => "_blank" %>
       </div>
     <% end %>
     <div class="span6"></div>
-    <div class="span2">
-      <%= link_to image_tag("/assets/kiwi.png", :title => "Elaborado por Kiwi Systems"),
-        "http://www.facebook.com/chamini2", :target => "_blank" %>
+    <div class="span2" style="margin-top: 5px;">
+      <%= link_to image_tag("/assets/kiwi.png", :title => "Powered by Pyramid Kiwi"),
+        "#", :target => "_blank" %>
     </div>
     <div class="span1"></div>
   </div>
