--- a/app_documento/app/views/layouts/_navigation.html.erb
+++ b/app_documento/app/views/layouts/_navigation.html.erb
@@ -70,13 +70,16 @@
               <a href="" class="dropdown-toggle" data-toggle="dropdown">Registros</a>
               <ul class="dropdown-menu">
                 <li>
-                <%= link_to  'Productos', logproductos_index_path %>
+                  <%= link_to  'Usuarios', logsesions_index_path %>
                 </li>
                 <li>
-                <%= link_to  'Solicitudes', logtramite_index_path %>
+                  <%= link_to  'Productos', logproductos_index_path %>
                 </li>
                 <li>
-                <%= link_to  'Documentos', logdocumento_index_path %>
+                  <%= link_to  'Solicitudes', logtramite_index_path %>
+                </li>
+                <li>
+                  <%= link_to  'Documentos', logdocumento_index_path %>
                 </li>
               </ul>
               </li>
