--- a/app_documento/app/views/logdocumento/show_by_user.html.erb
+++ b/app_documento/app/views/logdocumento/show_by_user.html.erb
@@ -51,5 +51,6 @@
   <% end %>
 </tbody>
 </table>
+<button type="button" class="btn btn-default"><%= link_to 'Volver', :back %></button>
 </div>
 <div class="span1"></div>
