--- a/app_documento/app/views/presentacions/_form.html.erb
+++ b/app_documento/app/views/presentacions/_form.html.erb
@@ -40,6 +40,7 @@
             <%= f.action :submit, :label => flash[:accion] %>
           </td>
           <td>
+            <button type="button" class="btn btn-default"><%= link_to 'Volver', :back %></button>
           </td>
         </tr>
     </table>
