--- a/app_documento/app/views/usuarios/show.html.erb
+++ b/app_documento/app/views/usuarios/show.html.erb
@@ -132,6 +132,12 @@
          <%= link_to 'Listar documentos (todos)', documentos_index_usuario_path(:id => @usuario.id) %>
       </td>
     </tr>
+    <tr>
+      <td>
+         <%= image_tag("/assets/listar.png", :class => "cos_icon", :title => "Listar Productos")%>
+         <%= link_to 'Ver registro', logsesions_show_by_user_path(:id => @usuario.id) %>
+      </td>
+    </tr>
     <% end %>
   </table>
  <div id="dialog_contr" style="display:none;" style="margin:0; padding:0; height: 300px;"></div>
